--- a/storybook/package.json
+++ b/storybook/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/theWickedWebDev/stephenyoung#readme",
   "dependencies": {
+    "@storybook/addon-knobs": "^5.3.14",
     "react": "^16.12.0"
   },
   "devDependencies": {
