--- a/package.json
+++ b/package.json
@@ -1,32 +1,57 @@
 {
-  "name": "stephenyoung_app",
+  "name": "react-ssr",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "dev": "webpack && concurrently \"webpack --watch\" \"nodemon dist\"",
+    "build": "webpack --mode=production",
+    "start": "NODE_ENV=production node dist/index.js"
+  },
+  "engines": {
+    "node": "9.2.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/theWickedWebDev/stephenyoung.git"
+    "url": "https://github.com/MarvelousWololo/ssr-react"
   },
-  "author": "Stephen Young <stephenyoung7267@gmail.com>",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/theWickedWebDev/stephenyoung/issues"
-  },
-  "homepage": "https://github.com/theWickedWebDev/stephenyoung#readme",
   "dependencies": {
-    "react": "^16.12.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@storybook/addon-actions": "^5.3.14",
-    "@storybook/addon-links": "^5.3.14",
-    "@storybook/addons": "^5.3.14",
-    "@storybook/react": "^5.3.14",
-    "babel-loader": "^8.0.6"
+    "aos": "^2.3.4",
+    "autoprefixer": "^9.7.4",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "compression": "^1.7.3",
+    "concurrently": "^3.6.1",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
+    "express": "^4.16.4",
+    "fs-extra": "^7.0.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "mocha": "^5.2.0",
+    "node-sass": "^4.13.1",
+    "nodemon": "^1.18.10",
+    "postcss-loader": "^3.0.0",
+    "react": "^16.8.3",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^16.8.3",
+    "react-helmet": "^5.2.1",
+    "react-router-dom": "^4.3.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3",
+    "webpack-merge": "^4.2.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
