--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "fs-extra": "^7.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^5.2.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "nodemon": "^1.18.10",
+    "pdfkit": "^0.11.0",
     "postcss-loader": "^3.0.0",
     "react": "^16.8.3",
     "react-addons-test-utils": "^15.6.2",
@@ -48,10 +50,12 @@
     "react-helmet": "^5.2.1",
     "react-router-dom": "^4.3.1",
     "sass-loader": "^8.0.2",
+    "string-strip-html": "^4.3.16",
     "style-loader": "^1.1.3",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-merge": "^4.2.2",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "webpack-plugin-replace": "^1.2.0"
   }
 }
