:building_construction: i18n Translations Setup

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "enzyme-adapter-react-16": "^1.10.0",
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
+    "i18next": "^19.3.2",
+    "i18next-browser-languagedetector": "^4.0.2",
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^5.2.0",
     "moment": "^2.24.0",
@@ -46,8 +48,10 @@
     "postcss-loader": "^3.0.0",
     "react": "^16.8.3",
     "react-addons-test-utils": "^15.6.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.1",
+    "react-i18next": "^11.3.3",
     "react-router-dom": "^4.3.1",
     "sass-loader": "^8.0.2",
     "string-strip-html": "^4.3.16",
