--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "compression": "^1.7.3",
     "concurrently": "^3.6.1",
+    "config": "^3.3.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "enzyme": "^3.9.0",
