--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.0",
     "aos": "^2.3.4",
     "autoprefixer": "^9.7.4",
     "babel-core": "^6.26.3",
