--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "webpack && concurrently \"webpack --watch\" \"nodemon dist\"",
+    "dev": "webpack --mode=production && concurrently \"webpack --watch\" \"nodemon dist\"",
     "build": "webpack --mode=production",
     "start": "NODE_ENV=production node dist/index.js"
   },
@@ -39,6 +39,7 @@
     "enzyme-adapter-react-16": "^1.10.0",
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
+    "html-minifier": "^4.0.0",
     "i18next": "^19.3.2",
     "i18next-browser-languagedetector": "^4.0.2",
     "mini-css-extract-plugin": "^0.9.0",
