:building_construction: Added Jest, Supertest and Enzyme

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "webpack --mode=production && concurrently \"webpack --watch\" \"nodemon dist\"",
-    "build": "webpack --mode=production",
-    "start": "NODE_ENV=production node dist/index.js"
+    "build": "npm run test && webpack --mode=production",
+    "start": "NODE_ENV=production node dist/index.js",
+    "test": "NODE_ENV=test && BABEL_ENV=test && jest --detectOpenHandles"
   },
   "engines": {
     "node": "9.2.0"
@@ -19,12 +20,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
     "@fortawesome/fontawesome-free": "^5.6.0",
     "aos": "^2.3.4",
     "autoprefixer": "^9.7.4",
     "babel-core": "^6.26.3",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
@@ -36,12 +42,16 @@
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.10.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "express": "^4.16.4",
     "fs-extra": "^7.0.1",
     "html-minifier": "^4.0.0",
     "i18next": "^19.3.2",
     "i18next-browser-languagedetector": "^4.0.2",
+    "jest-css-modules": "^2.1.0",
+    "jest-environment-enzyme": "^7.1.2",
+    "jest-enzyme": "^7.1.2",
+    "jest-transform-stub": "^2.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^5.2.0",
     "moment": "^2.24.0",
@@ -57,6 +67,7 @@
     "react-i18next": "^11.3.3",
     "react-router-dom": "^4.3.1",
     "sass-loader": "^8.0.2",
+    "source-map-support": "^0.5.16",
     "string-strip-html": "^4.3.16",
     "style-loader": "^1.1.3",
     "webpack": "^4.29.5",
@@ -64,5 +75,11 @@
     "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2",
     "webpack-plugin-replace": "^1.2.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "jest": "^25.1.0",
+    "supertest": "^4.0.2"
   }
 }
