--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "webpack --mode=production && concurrently \"webpack --watch\" \"nodemon dist\"",
+    "dev": "webpack --mode=production && concurrently \"webpack --watch --info-verbosity verbose\" \"nodemon dist --verbose\" \"npm run test:watch\"",
     "build": "npm run test && webpack --mode=production",
-    "start": "NODE_ENV=production node dist/index.js",
-    "test": "NODE_ENV=test && BABEL_ENV=test && jest --detectOpenHandles"
+    "start": "node dist/index.js",
+    "test": "NODE_ENV=test && BABEL_ENV=test && jest --detectOpenHandles",
+    "test:watch": "NODE_ENV=test && BABEL_ENV=test && jest -o --watch --config=jest.config.js"
   },
   "engines": {
     "node": "9.2.0"
