--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "@fortawesome/fontawesome-free": "^5.6.0",
-    "aos": "^2.3.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "autoprefixer": "^9.7.4",
-    "babel-core": "^6.26.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -53,6 +56,7 @@
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
     "jest-transform-stub": "^2.0.0",
+    "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^5.2.0",
     "moment": "^2.24.0",
@@ -66,6 +70,8 @@
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.1",
     "react-i18next": "^11.3.3",
+    "react-loadable": "^5.5.0",
+    "react-loadable-ssr-addon": "^0.2.0",
     "react-router-dom": "^4.3.1",
     "sass-loader": "^8.0.2",
     "source-map-support": "^0.5.16",
@@ -78,9 +84,11 @@
     "webpack-plugin-replace": "^1.2.0"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "jest": "^25.1.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "webpack-bundle-analyzer": "^3.6.1"
   }
 }
