--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "NODE_ENV=production webpack --mode=production && concurrently \"webpack --watch --info-verbosity verbose\" \"nodemon dist --verbose\" \"npm run test:watch\"",
+    "dev": "NODE_ENV=production webpack --mode=production && concurrently \"webpack --watch --info-verbosity verbose\" \"nodemon dist --verbose\"",
     "build": "npm run test && webpack --mode=production",
     "start": "node dist/index.js",
     "test": "NODE_ENV=test && BABEL_ENV=test && jest --detectOpenHandles",
@@ -29,6 +29,10 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@loadable/babel-plugin": "^5.12.0",
+    "@loadable/component": "^5.12.0",
+    "@loadable/server": "^5.12.0",
+    "@loadable/webpack-plugin": "^5.12.0",
     "autoprefixer": "^9.7.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^25.1.0",
