--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "NODE_ENV=production webpack --mode=production && concurrently \"webpack --watch --info-verbosity verbose\" \"nodemon dist --verbose\" \"npm run test\"",
-    "build": "npm run test && webpack --mode=production",
+    "dev": "NODE_ENV=production webpack --mode=production && concurrently \"webpack --watch --info-verbosity verbose\" \"nodemon dist --verbose\"",
+    "build": "webpack --mode=production",
     "start": "node dist/index.js",
+    "lint": "eslint src",
     "test": "NODE_ENV=test && BABEL_ENV=test && jest --detectOpenHandles",
     "test:watch": "NODE_ENV=test && BABEL_ENV=test && jest -o --watch --config=jest.config.js"
   },
@@ -35,6 +36,7 @@
     "@loadable/webpack-plugin": "^5.12.0",
     "autoprefixer": "^9.7.4",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -60,6 +62,7 @@
     "jest-enzyme": "^7.1.2",
     "jest-transform-stub": "^2.0.0",
     "lodash-webpack-plugin": "^0.11.5",
+    "loglevel": "^1.6.7",
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^5.2.0",
     "moment": "^2.24.0",
@@ -88,6 +91,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "supertest": "^4.0.2",
     "webpack-bundle-analyzer": "^3.6.1"
