--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "webpack --mode=production",
     "start": "node dist/index.js",
     "lint": "eslint src",
-    "test": "NODE_ENV=test && BABEL_ENV=test && jest --detectOpenHandles",
-    "test:watch": "NODE_ENV=test && BABEL_ENV=test && jest -o --watch --config=jest.config.js"
+    "test": "NODE_ENV=test BABEL_ENV=test jest --detectOpenHandles --json --outputFile=.storybook/test-results.json",
+    "test:watch": "NODE_ENV=test && BABEL_ENV=test && jest -o --watch --config=jest.config.js",
+    "storybook": "start-storybook -s ./src -p 6006",
+    "buildstorybook": "build-storybook"
   },
   "engines": {
     "node": "9.2.0"
@@ -36,6 +38,9 @@
     "@loadable/component": "^5.12.0",
     "@loadable/server": "^5.12.0",
     "@loadable/webpack-plugin": "^5.12.0",
+    "@storybook/addon-a11y": "^5.3.17",
+    "@storybook/addon-info": "^5.3.17",
+    "@storybook/addon-storysource": "^5.3.17",
     "autoprefixer": "^9.7.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
@@ -78,7 +83,9 @@
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^4.3.1",
+    "react-syntax-highlighter": "^12.2.1",
     "sass-loader": "^8.0.2",
+    "showdown": "^1.9.1",
     "source-map-support": "^0.5.16",
     "string-strip-html": "^4.3.16",
     "style-loader": "^1.1.3",
@@ -93,6 +100,11 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "@storybook/addon-actions": "^5.3.17",
+    "@storybook/addon-jest": "^5.3.17",
+    "@storybook/addon-links": "^5.3.17",
+    "@storybook/addons": "^5.3.17",
+    "@storybook/react": "^5.3.17",
     "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "supertest": "^4.0.2",
