--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint src",
     "test": "NODE_ENV=test BABEL_ENV=test jest --detectOpenHandles --json --outputFile=.storybook/test-results.json",
     "test:watch": "NODE_ENV=test && BABEL_ENV=test && jest -o --watch --config=jest.config.js",
-    "storybook": "start-storybook -s ./src -p 6006",
+    "storybook": "NODE_ENV=production start-storybook -s ./src -p 6006",
     "buildstorybook": "NODE_ENV=production build-storybook"
   },
   "engines": {
@@ -92,6 +92,7 @@
     "sass-loader": "^8.0.2",
     "showdown": "^1.9.1",
     "source-map-support": "^0.5.16",
+    "storybook-react-router": "^1.0.8",
     "string-strip-html": "^4.3.16",
     "style-loader": "^1.1.3",
     "webpack": "^4.29.5",
