--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build": "webpack --mode=production",
     "start": "node dist/index.js",
     "lint": "eslint src",
+    "flow": "flow",
+    "floww": "flow-watch",
     "test": "NODE_ENV=test BABEL_ENV=test jest --detectOpenHandles --json --outputFile=.storybook/test-results.json",
     "test:watch": "NODE_ENV=test && BABEL_ENV=test && jest -o --watch --config=jest.config.js",
     "storybook": "NODE_ENV=production start-storybook -s ./src -p 6006",
@@ -33,6 +35,7 @@
     "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
+    "@babel/preset-flow": "^7.9.0",
     "@fortawesome/fontawesome-free": "^5.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
@@ -66,6 +69,9 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "express": "^4.16.4",
+    "flow-bin": "^0.121.0",
+    "flow-typed": "^3.1.0",
+    "flow-watch": "^1.1.5",
     "fs": "0.0.1-security",
     "fs-extra": "^7.0.1",
     "html-minifier": "^4.0.0",
