--- a/src/public/components/package.json
+++ b/src/public/components/package.json
@@ -35,6 +35,7 @@
     "concurrently": "^5.1.0",
     "flow-bin": "^0.121.0",
     "flow-watch": "^1.1.5",
+    "loglevel": "^1.6.7",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "rollup-plugin-flow": "^1.1.1"
