--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "pdfkit": "^0.11.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
+    "query-string": "^6.12.1",
     "react": "^16.8.3",
     "react-addons-test-utils": "^15.6.2",
     "react-cookie": "^4.0.3",
